fix thumbnail issue not showing all user

--- a/app/assets/stylesheets/api/home_page.scss
+++ b/app/assets/stylesheets/api/home_page.scss
@@ -55,40 +55,44 @@
 
 .home-main-matches-thumbnail-container {
   display: flex;
-  justify-content: center;
   overflow: scroll;
   margin-top: 10px;
   padding-bottom: 10px;
   height: 255px;
-  max-width: 900px;
+  width: auto;
+  overflow-x: scroll;
   overflow-y: hidden;
 }
 
-.home-main-matches-thumbnail-container::-webkit-scrollbar-track
-{
+.home-main-matches-thumbnail-container-outer {
+  display: flex;
+  justify-content: center;
+  overflow: scroll;
+  height: auto;
+  max-width: 900px;
+}
+
+.home-main-matches-thumbnail-container::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	background-color: #F5F5F5;
   border-radius: 10px;
 }
 
-.home-main-matches-thumbnail-container::-webkit-scrollbar
-{
+.home-main-matches-thumbnail-container::-webkit-scrollbar {
   height: 8px;
   width: 3px;
 	background-color: #F5F5F5;
   border-radius: 10px;
 }
 
-.home-main-matches-thumbnail-container::-webkit-scrollbar-thumb
-{
+.home-main-matches-thumbnail-container::-webkit-scrollbar-thumb {
 	background-color: #000000;
   border-radius: 10px;
 }
 
-
-.home-main-matches-thumbnail-container:nth-child(2) {
-  padding-left: 360px;
-}
+// .home-main-matches-thumbnail-container:nth-child(2) {
+//   padding-left: 360px;
+// }
 
 .home-main-matches-thumbnail {
   margin: 5px;
